# HNG_TASK_05

./: .env.example  .gitignore  README.md  celery_app.py  check_status.py  pyproject.toml  requirements.txt  test_pipeline.py
alembic/versions/: 90aeb7c687d7_init.py  b7a9f2d1e4c3_multi_document_analysis.py  c9d4e1a7b2f8_align_analysis_id_to_uuid.py  d7e2c8b9a3f0_add_granular_processing_states.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: analysis.py  health.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  analysis.py
app/services/: gemini.py  processor.py  state.py  tasks.py
tests/: conftest.py  test_endpoints.py  test_health.py
