[project]
name = "clinsights"
version = "0.1.0"
description = "An AI-powered laboratory result interpretation app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "psycopg2-binary>=2.9.12",
    "pre-commit>=4.6.0",
    "resend>=2.30.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.28.0",
    "Pillow>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["alembic", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
